--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'gz-dbt-repository'
+name: 'my_new_project'
 version: '1.0.0'
 config-version: 2
 
@@ -38,8 +38,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  gz-dbt-repository:
     # Applies to all files under models/example/
+  my_new_project:
     mart:
       +materialized: table
     staging:
