--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,6 +42,8 @@ models:
   my_new_project:
     mart:
       +materialized: table
+      finance:
+        schema : TR
     staging:
       +materialized: view
     raw:
